--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -8,7 +8,7 @@
 \def \cmake {\link[ref:cmake]{\Black}{\it Cmake}}
 \def \makefile {\link[ref:makefile]{\Black}{\it Makefile}}
 \def \of {\link[ref:openFrameworks]{\Black}{\it OF}}
-\def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
+\def \nanomsg {nanomsg}
 \def \ofxCMake {{ofxCMake}\urlnote{https://github.com/BildPeter/ofxCMake}}
 \def \ofnode {{ofnode}\urlnote{https://github.com/ofnode/of}}
 \def \br {\hfill \break}
