--- a/source/params.tex
+++ b/source/params.tex
@@ -1,5 +1,5 @@
 \worktype [O/EN]
-\workname {Bachelor thesis}
+\workname {Bachelor's thesis}
 \faculty {F3}
 \department {Department of Cybernetics}
 \title {The Multi-Agent Path Finding Demonstrator}
