--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -1,3 +1,8 @@
+\abstractCZ {
+    This work analyzes and improves upon the multi-agent planning system demonstrator currently used at the Department of Cybernetics.
+    The main objective is to improve existing functionality, add new features and enable the usage of {\mapfIR} format. 
+    The final software should significantly improve the developer experience for future students developing algorithms for the {\mapfIR} solver, enhance the impression when presenting to $3^{rd}$ parties, and provide a better user experience overall.
+    }
 \abstractEN {
     This work analyzes and improves upon the multi-agent planning system demonstrator currently used at the Department of Cybernetics.
     The main objective is to improve existing functionality, add new features and enable the usage of {\mapfIR} format. 
