--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -1,5 +1,5 @@
 \abstractCZ {
-    This work analyzes and improves upon the multi-agent planning system demonstrator currently used at the Department of Cybernetics.
+    Tato práce analyzuje a vzlepšuje demonstrátor robotů v pro automatizované sklady využívaný na pracovišti CIIRC.
     The main objective is to improve existing functionality, add new features and enable the usage of {\mapfIR} format. 
     The final software should significantly improve the developer experience for future students developing algorithms for the {\mapfIR} solver, enhance the impression when presenting to $3^{rd}$ parties, and provide a better user experience overall.
     }
