--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -1,6 +1,6 @@
 \abstractCZ {
     Tato práce analyzuje a vzlepšuje demonstrátor robotů v pro automatizované sklady využívaný na pracovišti CIIRC.
-    The main objective is to improve existing functionality, add new features and enable the usage of {\mapfIR} format. 
+    Hlavním úkolem této práce je vylepšit stávající funkcionalitu, přidat nové funkcionality a umožnit použítí formátu kompatibilního s {\mapfIR} projektem. 
     The final software should significantly improve the developer experience for future students developing algorithms for the {\mapfIR} solver, enhance the impression when presenting to $3^{rd}$ parties, and provide a better user experience overall.
     }
 \abstractEN {
