--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -1,7 +1,7 @@
 \abstractCZ {
     Tato práce analyzuje a vzlepšuje demonstrátor robotů v pro automatizované sklady využívaný na pracovišti CIIRC.
     Hlavním úkolem této práce je vylepšit stávající funkcionalitu, přidat nové funkcionality a umožnit použítí formátu kompatibilního s {\mapfIR} projektem. 
-    The final software should significantly improve the developer experience for future students developing algorithms for the {\mapfIR} solver, enhance the impression when presenting to $3^{rd}$ parties, and provide a better user experience overall.
+    Výsledný software by měl zásadně zlepšit dojem z práce s demonstrátorem pro studenty, kteří budou v budoucnu vyvíjet algoritmy pro {\mapfIR} solver. Dále také vylepšit celkový dojen při prezentaci externím subjektům.
     }
 \abstractEN {
     This work analyzes and improves upon the multi-agent planning system demonstrator currently used at the Department of Cybernetics.
