--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -1,5 +1,5 @@
 \abstractCZ {
-    Tato práce analyzuje a vzlepšuje demonstrátor robotů v pro automatizované sklady využívaný na pracovišti CIIRC.
+    Tato práce analyzuje a vylepšuje demonstrátor robotů v pro automatizované sklady využívaný na pracovišti CIIRC.
     Hlavním úkolem této práce je vylepšit stávající funkcionalitu, přidat nové funkcionality a umožnit použítí formátu kompatibilního s {\mapfIR} projektem. 
     Výsledný software by měl zásadně zlepšit dojem z práce s demonstrátorem pro studenty, kteří budou v budoucnu vyvíjet algoritmy pro {\mapfIR} solver. Nedílnou součástí práce je také vylepšení celkového dojmu při prezentaci externím subjektům.
     }
