--- a/source/params.tex
+++ b/source/params.tex
@@ -6,3 +6,5 @@
 \author {Tůma Ondřej}
 \supervisor {\kulich}
 \date {May 2022}
+\studyinfo {Open Informatics, Software}
+\keywordsEN {pathfinding, visualization, software}
