--- a/source/params.tex
+++ b/source/params.tex
@@ -7,4 +7,5 @@
 \supervisor {\kulich}
 \date {May 2022}
 \studyinfo {Open Informatics, Software}
-\keywordsEN {pathfinding, visualization, software}
+\keywordsEN {software, visualization, robot, pathfinding}
+\keywordsCZ {software, vizualizace, robot}
