--- a/source/params.tex
+++ b/source/params.tex
@@ -1,7 +1,7 @@
 \worktype [O/EN]
 \workname {Bachelor's thesis}
 \faculty {F3}
-\department {Department of Cybernetics}
+\department {Department of Computer Science}
 \title {The Multi-Agent Path Finding Demonstrator}
 \author {Tůma Ondřej}
 \supervisor {\kulich}
