--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -4,7 +4,7 @@
     Výsledný software by měl zásadně zlepšit dojem z práce s demonstrátorem pro studenty, kteří budou v budoucnu vyvíjet algoritmy pro {\mapfIR} solver. Nedílnou součástí práce je také vylepšení celkového dojmu při prezentaci externím subjektům.
     }
 \abstractEN {
-    This work analyzes and improves upon the multi-agent planning system demonstrator currently used at the Department of Cybernetics.
+    This work analyzes and improves upon the multi-agent planning system demonstrator currently used at the Czech Institute of Informatics, Robotics and Cybernetics.
     The main objective is to improve existing functionality, add new features and enable the usage of {\mapfIR} format. 
     The final software should significantly improve the developer experience for future students developing algorithms for the {\mapfIR} solver, enhance the impression when presenting to $3^{rd}$ parties, and provide a better user experience overall.
     }
